# Document-Intelligence-Refinery-

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  REPORT.md  pyproject.toml
configs/: extraction_rules.yaml  triage_rules.yaml
rubric/: extraction_rules.yaml
scripts/: build_artifacts.py  labeled_queries.json  measure_retrieval_precision.py  onboard_documents.py
src/refinery/: __init__.py  __main__.py  cli.py  env.py  models.py
src/refinery/agents/: __init__.py  audit.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/refinery/chunking/: __init__.py  config.py  engine.py  validator.py
src/refinery/extraction/: __init__.py  base.py  config_models.py  fast_text.py  layout_docling.py  ledger.py  router.py  schema.py  vision_openrouter.py
src/refinery/facts/: __init__.py  extractor.py  schema.py  store.py
src/refinery/models/: __init__.py  document_profile.py  extraction_schema.py  provenance.py
src/refinery/pageindex/: __init__.py  builder.py  models.py  query.py
src/refinery/strategies/: __init__.py  base.py  config_models.py  fast_text.py  layout_docling.py  ledger.py  vision_openrouter.py
src/refinery/triage/: __init__.py  agent.py  config.py  exceptions.py  layout.py  origin.py
src/refinery/vector_store/: __init__.py
tests/: __init__.py  test_chunking.py  test_query_agent_and_audit.py  test_refinery.py
